update to openjdk14 and refactor account rocksdb store